fix: mobile popup container overflow scroll

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2273,12 +2273,20 @@ a.details_link {
     width: 100%;
   }
 
+  .pop_appointment {
+    overflow-y: auto;
+    min-height: 100vh;
+    height: 100%;
+  }
+
   .appointment_container {
     width: 90%;
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+    height: 100%;
+    overflow-y: auto;
   }
 
   .input_container {
